--- a/app/style/ExportPage.less
+++ b/app/style/ExportPage.less
@@ -55,12 +55,12 @@
   .export-info-not-expanded {
     font-weight: 600;
     display: inline;
-  }  
+  }
 }
 
 ul.export-info-fields {
   margin-top: 0;
-  margin-left: 10px;
+  margin-left: 40px;
 }
 
 .export-info-fields > li {
@@ -74,7 +74,7 @@ ul.export-info-fields {
   .export-area-right {
     padding-right: 20px;
     width: 263px;
-  }  
+  }
 
   .export-area-button-wrapper {
     width: 634px;
