--- a/app/style/HomePage.less
+++ b/app/style/HomePage.less
@@ -270,6 +270,7 @@
   .ticket-tx-wrapper {
     margin-left: 0;
     margin-top: 25px;
+    margin-bottom: 50px;
   }
 
   .home-content-title {
