--- a/app/style/Layout.less
+++ b/app/style/Layout.less
@@ -231,6 +231,7 @@
   position: absolute;
   bottom: 0px;
   left: 100px;
+  white-space: nowrap;
 }
 
 .tabbed-page-header > .tabs > .tab {
@@ -456,6 +457,10 @@
   .tabbed-page-header {
     height: 82px;
     padding-top:30px;
+  }
+
+  .tabbed-page-header > .standalone-page-header {
+    padding: 0;
   }
 
   .standalone-page-header {
