--- a/app/style/MiscComponents.less
+++ b/app/style/MiscComponents.less
@@ -367,7 +367,7 @@
   color: var(--disabled-color);
   font-size: 13px;
   display: flex;
-  align-items: center;  
+  align-items: center;
 }
 
 .rescan-progress-percent {
@@ -598,7 +598,7 @@
   }
    .step.unchecked {
     background-color: var(--wallet-tutorial-step-indicator);
-  }   
+  }
 }
 
 .doc-unavailable-alert {
@@ -809,7 +809,7 @@
   margin-right: 20px;
 }
 
-@media screen and (max-width: 1179px) { 
+@media screen and (max-width: 1179px) {
   .rebroadcast-button-container, .abandon-button-container {
     width: 770px;
   }
@@ -819,14 +819,14 @@
   }
 }
 
-@media screen and (max-width: 1106px) { 
+@media screen and (max-width: 1106px) {
   .rebroadcast-button-container, .abandon-button-container {
     width: 670px;
-  } 
-  
+  }
+
   .abandon-button-container {
     width: 670px;
-  } 
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -844,6 +844,6 @@
   }
 
   .voting-progress-indicator {
-    width: 315px;
+    width: 120px;
   }
 }
